# ShockGraph

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake  LICENSE  README.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows-msvc.yml
ShockGraph/: CMakeLists.txt  Core.hpp  IShaderReloadListener.hpp  RHIManager.cpp  RHIManager.hpp  Resources.cpp  Resources.hpp  Task.cpp  Task.hpp  TaskCommandList.cpp  TaskCommandList.hpp  TaskGraph.cpp  TaskGraph.hpp  TaskResourceManager.cpp  TaskResourceManager.hpp  main.cpp
VisualTests/: App.cpp  App.hpp  CMakeLists.txt  Core.hpp  DDSLoader.cpp  DDSLoader.hpp  IVisualTest.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  main.cpp
VisualTests/Tests/: AlphaBlending.cpp  AlphaBlending.hpp  AlphaToCoverage.cpp  AlphaToCoverage.hpp  BCnTexture.cpp  BCnTexture.hpp  BlitImage.cpp  BlitImage.hpp  ComputeUAV.cpp  ComputeUAV.hpp  DrawIndirect.cpp  DrawIndirect.hpp  GeometryShader.cpp  GeometryShader.hpp  HelloTexture.cpp  HelloTexture.hpp  HelloTriangle.cpp  HelloTriangle.hpp  IndexBuffer.cpp  IndexBuffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  MSAA.cpp  MSAA.hpp  PushConstants.cpp  PushConstants.hpp  RayQueryCompute.cpp  RayQueryCompute.hpp  RayQueryPixel.cpp  RayQueryPixel.hpp  RayTracingCompute.cpp  RayTracingCompute.hpp  SpecialisationConstants.cpp  SpecialisationConstants.hpp  TesselationShader.cpp  TesselationShader.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UpdateBuffer.cpp  UpdateBuffer.hpp  (+6 more)
resources/Shaders/Include/Common/: DescriptorIndexing.slang  Intrinsics.slang  PushConstant.slang  SpecializationConstant.slang  UniformBufferView.slang  UnorderedAccessView.slang
resources/VisualTests/Shaders/: AlphaBlending.slang  AlphaToCoverage.slang  BCnTexture.slang  BlitImage.slang  ComputeUAV.slang  DrawIndirect.slang  GeometryShader.slang  HelloTexture.slang  HelloTriangle.slang  IndexBuffer.slang  InstanceBuffer.slang  MSAA.slang  PushConstants.slang  RayQuery.slang  RayQueryCompute.slang  RayQueryPixel.slang  SpecialisationConstants.slang  TesselationShader.slang  UniformBuffer.slang  UpdateBuffer.slang  Wireframe.slang
resources/VisualTests/Textures/: NPOT_Mip_Test_BC3.dds  NPOT_Test_BC1.dds
